# ai-reader

./: .gitignore  AiReader.iss  CHANGELOG.md  CHANGELOG.zh_CN.md  CMakeLists.txt  README.md  SPEC.md  build.bat  copy-vc-runtime.ps1  install-deps.sh  manifest.json  package.bat  publish-release.ps1  sign-windows.ps1  windeploy.bat
build_ninja/: CMakeCache.txt  cmake_install.cmake
build_ninja/.qt/: QtDeploySupport.cmake
build_ninja/.qt/deploy_qml_imports/: ai_reader.cmake
build_ninja/.qt_plugins/: Qt6_QmlPlugins_Imports_ai-reader.rsp
build_ninja/.rcc/: ai-reader_raw_qml_0.qrc  icons.qrc  qmake_AiReader.qrc
build_ninja/.rcc/qmlcache/: ai-reader_qml_loader_file_list.rsp
build_ninja/AiReader/: qmldir
build_ninja/AiReader/qml/: BlockList.qml  ChatPane.qml  PromptsDialog.qml  SettingsDialog.qml  TocSidebar.qml
build_ninja/qmltypes/: ai-reader_foreign_types.txt
docs/: 工作清单-文献管理能力.md  需求-文献管理能力.md
i18n/: ai-reader_zh_CN.ts
installer/macos/: make-dmg.sh  sign-dev.sh
qml/: BlockList.qml  ChangelogDialog.qml  ChatPane.qml  CodeBlock.qml  DockGrip.qml  FolderPane.qml  LibraryPane.qml  LoginDialog.qml  Main.qml  MathBlock.qml  MembersDialog.qml  MetadataDialog.qml  PasswordDialog.qml  ProjectBar.qml  PromptsDialog.qml  SettingsDialog.qml  SharedAiDialog.qml  SummaryDialog.qml  SummaryPane.qml  Theme.qml  TocSidebar.qml  VisionDialog.qml  WelcomeWizard.qml
resources/: version.rc.in
resources/icons/: appicon.icns
server/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  update-manifest.example.json
server/prisma/: alter-cas.sql  init.sql  schema.prisma
server/src/: app.module.ts  main.ts
server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  cas.service.ts  current-user.decorator.ts  jwt-auth.guard.ts
server/src/auth/dto/: register.dto.ts
server/src/events/: change-notifier.ts  events.gateway.ts  events.module.ts
server/src/export/: export.controller.ts  export.module.ts
server/src/files/: files.controller.ts  files.module.ts  s3.service.ts
server/src/files/dto/: upload-url.dto.ts
server/src/health/: health.controller.ts
server/src/prisma/: prisma.service.ts
server/src/projects/: projects.controller.ts  projects.module.ts  projects.service.ts
server/src/projects/dto/: create-project.dto.ts  member.dto.ts  update-project.dto.ts
server/src/sync/: sync.controller.ts  sync.module.ts  sync.service.ts
server/src/sync/dto/: push.dto.ts
server/src/update/: update.controller.ts  update.module.ts  update.service.ts
src/: AiArtifactService.cpp  AiArtifactService.h  AnthropicClient.cpp  AnthropicClient.h  ApiClient.cpp  ApiClient.h  AuthController.cpp  AuthController.h  Block.h  BlockCache.cpp  BlockCache.h  BlockClusterer.cpp  BlockClusterer.h  BlockListModel.cpp  BlockListModel.h  ChatContent.cpp  ChatContent.h  ChatHistoryCache.cpp  ChatHistoryCache.h  ChatModel.cpp  ChatModel.h  ChatService.cpp  ChatService.h  ChatSession.h  ChatSessionListModel.cpp  ChatSessionListModel.h  CodeHighlighter.cpp  CodeHighlighter.h  CrashReporter.cpp  CrashReporter.h  FileSyncService.cpp  FileSyncService.h  LatexRenderer.cpp  LatexRenderer.h  LayoutSettings.cpp  LayoutSettings.h  Library.cpp  Library.h  LibraryDb.cpp  LibraryDb.h  (+44 more)
